[polish] fix resource leak; avoid NullPointException ; fix Long equals to int statement ; (#2154)
* [polish] fix resource leak; avoid nullPointException ; fix Long equals to int statement ;

Co-authored-by: gongzhongqiang <gongzhongqiang@gigacloudtech.com>